# docu-stream

./: Dockerfile  Dockerfile-convert  README.md
client/go/: go.mod  word.go
convert/: Cargo.toml  Dockerfile  README.md  build.rs  startup.sh  test.sh
convert/src/: main.rs
office/: Dockerfile  Program.cs  office.csproj  office.sln
office/Properties/: launchSettings.json
office/Protos/: greet.proto  word.proto
office/Services/: WordService.cs
office/test/: Template.docx  test.sh
proto/: convert.proto  word.proto
test/: Template.docx  codegen.sh  convert.go  go.mod  go.sum  word.sh
