[package]
name = "convert"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
protoc = "2.28.0"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11.0"
